fix dark mode

--- a/style/water.css
+++ b/style/water.css
@@ -44,10 +44,10 @@
 }
 .drink .image2 {
 	display: none;
-	padding: 5px;
-	height: 60px;
-	width: 60px;
-	border-radius: 20px;
+	padding: 10px;
+	height: 20px;
+	width: 20px;
+	border-radius: 10px;
 	
 }
 
